samples/_failures_safe/1761096096_a34a5c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cd41b0b5.c: In function ‘main’:
./samples/SAFE/__tmp_cd41b0b5.c:184:16: error: expected ‘;’ at end of input
  184 |         fprintf
      |                ^
      |                ;
./samples/SAFE/__tmp_cd41b0b5.c:184:9: error: expected declaration or statement at end of input
  184 |         fprintf
      |         ^~~~~~~
./samples/SAFE/__tmp_cd41b0b5.c:184:9: error: expected declaration or statement at end of input
